#3069 Whitespace fix

--- a/packages/core/src/components/onboarding-tip/onboarding-tip.scss
+++ b/packages/core/src/components/onboarding-tip/onboarding-tip.scss
@@ -142,7 +142,7 @@
     padding-block: onboarding-tip-variables.$padding-block;
     padding-inline: onboarding-tip-variables.$padding-inline;
     border-radius: onboarding-tip-variables.$border-radius;
-    display: inline-block;
+    display: block;
     font-size: typography.$root-font-size-base;
     position: relative;
 
